--- a/examples/index.html
+++ b/examples/index.html
@@ -15,8 +15,19 @@
 		//var start_point = new google.maps.LatLng(51.51025, -0.13814);
 		//var end_point = new google.maps.LatLng(51.52168, -0.14573);
 		
-		var start_point = new google.maps.LatLng(53.53172, -1.031);
-		var end_point = new google.maps.LatLng(53.53589,-1.02604);
+		//var start_point = new google.maps.LatLng(53.53172, -1.031);
+		//var end_point = new google.maps.LatLng(53.53589,-1.02604);
+
+		// var start_point = new google.maps.LatLng(53.53678,-1.0766);
+		// var end_point = new google.maps.LatLng(53.54612,-1.08071);
+
+		// var end_point = new google.maps.LatLng(53.53678,-1.0766);
+		// var start_point = new google.maps.LatLng(53.54612,-1.08071);
+
+		var start_point = new google.maps.LatLng(53.53584,-1.02554);
+		var end_point = new google.maps.LatLng(53.5214,-1.04092);
+
+
 
 
 		//var lookat_point = new google.maps.LatLng(61.52973181322807, -0.44986070825193565);
